<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:actionBarNavMode="standard"

    tools:context="com.example.libraryguest2.bac_calculator.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/stringWeight"
            android:id="@+id/textViewWeight"
            android:textSize="20sp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputTextWeight"
            android:hint="@string/stringEnterWeight"/>

        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringGender"
            android:id="@+id/textViewGender"
            android:textSize="20sp"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButtonGender"
            android:textOn="M"
            android:textOff="F"/-->
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringGender"
            android:id="@+id/switchGender"
            android:showText="true"
            android:textColor="#808080"
            android:textSize="18sp"
            android:textOff="F"
            android:textOn="M"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringSave"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSave"
        android:layout_marginTop="30sp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/stringDrinkSize"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:layout_weight="0.25"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:id="@+id/radioGroupDrinkSize">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringDrink1oz"
            android:id="@+id/radioButton1oz"
            android:padding="2dp"
            android:checked="true"
            android:focusable="true"
            android:enabled="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringDrink5oz"
            android:id="@+id/radioButton5oz"
            android:layout_gravity="center_horizontal"
            android:padding="2dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringDrink12oz"
            android:id="@+id/radioButton12oz"
            android:padding="2dp"/>
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/stringAlcoholContent"
            android:id="@+id/textViewAlcohol"
            android:textSize="20sp"
            android:layout_weight="0.2"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarAlcohol"
            android:max="100"
            android:overScrollMode="ifContentScrolls"
            android:progress="100"
            android:layout_weight="0.6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/textViewAlcoholPercent"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringAddDrink"
            android:id="@+id/buttonAddDrink"
            android:layout_weight="0.50"
            tools:ignore="ButtonStyle" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringReset"
            android:id="@+id/buttonReset"
            android:layout_weight="0.50" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_marginTop="41dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringBACLevel"
        android:id="@+id/textViewBACLevel"
        android:textSize="35sp"
        android:layout_weight="0.5"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textBACLevel"
            android:textSize="30sp"
            android:layout_weight="0.5"
            android:text="@string/stringEmpty" />
    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBACLevel"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="25"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/progressBACLevel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringStatus"
            android:id="@+id/textViewStatus"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringEmpty"
            android:id="@+id/textFinalStatus"
            android:textSize="25sp"
            android:textColor="#000000"/>
    </LinearLayout>
</RelativeLayout>